--- a/index.html
+++ b/index.html
@@ -98,13 +98,23 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Reflux HTML CSS Template</h4>
+                  <h4>Expert Session Hands-on Python Libraries</h4>
                   <p>
-                    Donec tristique feugiat lacus, at sollicitudin nunc euismod
-                    sed. Mauris viverra, erat non sagittis gravida, elit dui
-                    mollis ante, sit amet eleifend purus ligula eget eros. Sed
-                    tincidunt quam vitae neque pharetra dignissim eget ut
-                    libero.
+                    Expert Session,Hands-on "Python Libraries" How to Analyze  and Predict Data" 
+                    Date: Saturday,  December 05, 2020
+                    Time: 10:30 AM to 11:30 AM India Time.
+                    By Mr. Lalsingh Ramavath 
+                    Principle Software Engineer , 
+                    Dell Technologies , Dallas , Texas , USA.
+                    Organized by Department of Computer Science and Engineering, 
+                    Vardhaman College of Engineering, Hyderabad.
+                    Registration is Free of cost.
+                    E-Certificate will be given to the Participants.
+                    Registration Link: https://tinyurl.com/VSession3
+                    joining (Microsoft Teams) link  will be communicated before one day.
+                    Contact:
+                    Mr. C Satya Kumar, Associate Professor, Department of CSE, 
+                    Vardhaman College of Engineering, Hyderabad.
                   </p>
                   <div class="white-button">
                     <a href="#">Read More</a>
