--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-image">
-                  <img src="assets/images/Session3_05-12-2020_Poster_LalSingh.jpeg" alt="" />
+                  <img src="assets/images/Session3_05-12-2020_Poster_LalSingh.jpg" alt="" />
                 </div>
               </div>
               <div class="col-md-6">
