--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
-                <li><a href="#section1">About Me</a></li>
+                <li><a href="#section1">Virtual Sessions</a></li>
                 <li><a href="#section2">What I’m good at</a></li>
                 <li><a href="#section3">My Work</a></li>
                 <li><a href="#section4">Contact Me</a></li>
