--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Expert Session Hands-on Python Libraries</h4>
+                  <h4>Expert Session Hands-on Python Libraries Saturday 05, 2020.</h4>
                   <p>
                     Expert Session,Hands-on "Python Libraries" How to Analyze  and Predict Data" 
                     Date: Saturday,  December 05, 2020
