--- a/index.html
+++ b/index.html
@@ -127,13 +127,19 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-text">
-                  <h4>Sed sagittis rhoncus velit</h4>
+                  <h4>Webinar on 
+                    "HIGHER EDUCATION OPPORTUNITIES IN GERMANY" Monday 07, 2020.</h4>
                   <p>
-                    Pellentesque habitant morbi tristique senectus et netus et
-                    malesuada fames ac turpis egestas. Vestibulum fermentum
-                    eleifend nibh, vitae sodales elit finibus pretium.
-                    Suspendisse potenti. Ut sollicitudin risus a sollicitudin
-                    semper.
+                    Webinar on 
+                    "HIGHER EDUCATION OPPORTUNITIES IN GERMANY"
+                    Date: Monday, December 07, 2020
+                    Time: 6 PM to 7:15 PM India Time.
+                    By Ms. Niketa Dedhia, Principal Consultant, Exponent Consultancy Services.
+                    Organized by Department of Computer Science and Engineering
+                    Vardhaman College of Engineering, Hyderabad.
+                    Registration is Free of cost.
+                    Registration Link: https://tinyurl.com/VSession
+                    Session joining (Microsoft Teams) link  will be communicated before one day.
                   </p>
                   <div class="white-button">
                     <a href="#">Read More</a>
