--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ https://templatemo.com/tm-531-reflux
                     Vardhaman College of Engineering, Hyderabad.
                     Registration is Free of cost.
                     E-Certificate will be given to the Participants.
-                    Registration Link:  <a href="https://tinyurl.com/VSession3">Register Here</a>
+                    Registration Link:  <a href="https://tinyurl.com/VSession3">Register Here </a>
                     joining (Microsoft Teams) link  will be communicated before one day.
                     Contact:
                     Mr. C Satya Kumar, Associate Professor, Department of CSE, 
@@ -138,7 +138,7 @@ https://templatemo.com/tm-531-reflux
                     Organized by Department of Computer Science and Engineering
                     Vardhaman College of Engineering, Hyderabad.
                     Registration is Free of cost.
-                    Registration Link: https://tinyurl.com/VSession
+                    Registration Link: <a href="https://tinyurl.com/VSession">Register Here </a> 
                     Session joining (Microsoft Teams) link  will be communicated before one day.
                   </p>
                   <div class="white-button">
