--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ https://templatemo.com/tm-531-reflux
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div class="image">
-              <a href="#"><img src="assets/images/author-image.jpg" alt="" /></a>
+              <a href="#"><img src="assets/images/LogoCollege.jpg" alt="" /></a>
             </div>
             <div class="author-content">
               <h4>CSE Virtual Sessions</h4>
-              <span>Web Designer</span>
+              <span>Department of CSE</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
